# claude-seo

./: AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: AUDIT-2026-05-09.md
scripts/: analyze_visual.py  bing_webmaster.py  capture_screenshot.py  commoncrawl_graph.py  dataforseo_costs.py  dataforseo_merchant.py  dataforseo_normalize.py  drift_baseline.py  drift_compare.py  drift_report.py  ga4_report.py  google_auth.py  google_report.py  gsc_inspect.py  indexing_notify.py  keyword_planner.py  moz_api.py  nlp_analyze.py  pagespeed_check.py  release_report.py  sync_flow.py  validate_backlink_report.py  verify_backlinks.py
